@@ -30,15 +30,17 @@ typedef unsigned int wint_t;
 
 /* For use as part of glibc (native) or as part of libstdc++ (maybe
    not glibc) */
-#if __GLIBC__ < 2 || (__GLIBC__ == 2  && __GLIBC_MINOR__ <= 1)
+#ifndef __mbstate_t_defined
+# define __mbstate_t_defined	1
 # ifdef _GLIBCPP_USE_WCHAR_T
 typedef struct
 {
-	int count;
-	wint_t value;
+  int count;
+  wint_t value;
 }__mbstate_t;
 # endif
 #endif
+#undef __need_mbstate_t
 
 typedef size_t _G_size_t;
 
@@ -49,6 +51,7 @@ typedef struct
   __off_t __pos;
   __mbstate_t __state;
 } _G_fpos_t;
+
 typedef struct
 {
   __off64_t __pos;
